--- a/app.css
+++ b/app.css
@@ -153,7 +153,7 @@
     @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
   }
   .button-transparent-icon {
-    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
   
     & > span {
       @apply w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-dark;
