--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,8 +1,8 @@
 <header x-data="navigationMenu()" class="relative z-50">
   <!-- Announcement bar -->
   <div class="bg-brand-primary-700 px-4 py-2 text-brand-light rounded-3xl mb-3 text-center">
-    <span class="text-sm">
-      Free Next-Working-Day Delivery – Available once daily before 1pm on orders over £125*
+    <span class="md:text-sm text-xs">
+      <p>Free Next-Working-Day Delivery – Available once daily before 1pm on orders over £125*</p>
     </span>
   </div>
   
@@ -12,7 +12,7 @@
     <div class="flex gap-4 w-full min-h-18">
       <!-- Rounded block 1 -->
       <div :class="navigationMenuOpen ? 'rounded-t-3xl' : 'rounded-3xl'"
-        class="relative xl:grow grow-0 flex duration-200 justify-between items-center px-5 py-2.5 gap-8 xl:border border-brand-border xl:bg-brand-light">
+        class="relative xl:grow grow-0 flex duration-200 justify-between items-center px-5 gap-8 xl:border border-brand-border xl:bg-brand-light">
         <a class="block text-teal-600" href="#">
           <span class="sr-only">Home</span>
           <svg class="md:size-14 size-12" width="54" height="30" viewBox="0 0 54 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -22,7 +22,7 @@
           </svg>
         </a>
 
-        <div class="flex-row gap-4 w-full justify-between items-center flex">
+        <div class="flex-row xl:gap-4 w-full justify-between items-center flex">
           <nav class="relative z-10">
             <div class="relative xl:block hidden">
               <ul class="flex flex-1 justify-center items-center p-1 space-x-1 list-none text-neutral-700 group">
